--- a/BlazorWebAssembly/Server/appsettings.json
+++ b/BlazorWebAssembly/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BlazorWebAssembly.Server-02832cbf-b02b-4f35-a77b-1ab3dfe751fc;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BlazorWebAssembly;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
